Fix Responsive Layout Issues (#1)
* Fix Alignment and Responsiveness Issues

* Add Link to Name in Navbar

* Add Menu on Mobile Devices

* Fix Home Page Image on Mobile

* Fix card alignments

* Delete the package lock file

--- a/frontend/src/app/apps/widget/app-card/app-card.component.scss
+++ b/frontend/src/app/apps/widget/app-card/app-card.component.scss
@@ -74,3 +74,12 @@ mat-divider {
     flex-direction: column;
     justify-content: center;
 }
+
+@media only screen and (max-width: 800px) {
+    .row {
+        flex-direction: column;
+    }
+    .feature-image {
+        margin-right: 12px;
+    }
+}
