--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -79,6 +79,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         background-color: mat.get-theme-color($theme, surface);
         max-width: 640px;
         margin: 1em;
+        margin-right: 32px !important;
     }
 
     // This is a special class definition for a stroked icon button.
@@ -104,7 +105,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         margin-left: 18%;
         margin-right: 18%;
         align-items: center;
-        max-width: 1200px;
 
         h1, h2, h3 {
             text-align: center;
